[package]
name = "might"
version = "0.2.0"
edition = "2021"
description = "Automated testing REST APIs"
readme = "README.md"
homepage = "https://github.com/basicfunc/might"
repository = "https://github.com/basicfunc/might"
license-file = "LICENSE"
keywords = ["api", "testing", "tools", "rest-api", "developer-tools"]
categories = ["command-line-utilities"]

[dependencies]
minreq = { version = "2.11.2", features = ["https-rustls-probe"] }
